# pyscrapper

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  change_log.md  config.py  drivers.py  requirements.txt  setup.cfg  setup.py
docs/: assembly.rst  conf.py  config.rst  index.rst  managers.rst  observers.rst  scrapper.rst  userguide.rst
docs/source/: conf.py  index.rst  scrapper.rst
examples/: ScrapeListWithFunction.py  ScrapeSynchrously.py  ScrapeWithEQ.py  ScrapeWithPreExecPostExec.py  ScrappingDemo.py  ScrappingListDemo.py
pyscrapper/: scrapper.py  utilities.py
pyscrapper/assembly/: managers.py  observers.py  urlloaders.py
pyscrapper/resources/: resource_manager.py
