# Inside of setup.cfg
[metadata]
description = 'A configurable web scrapping tool'
long_description = file: README.rst
author = Pavan Kumar Yekabote
url = https://github.com/pavanyekabote/pyscrapper
keywords = scrapping pyscrapper scrape webscrapping
license = MIT

[options.extras_require]
doc =
       sphinx
       sphinx-rtd-theme